# Mentorship

./: README.md  pyproject.toml
mentorship/: Dockerfile  docker-compose.yml  env.example  manage.py  pyproject.toml  pytest.ini
mentorship/mentorship/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
mentorship/users/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
mentorship/users/migrations/: 0001_initial.py
